# backend-app

./: .gitignore  README.md
auth/: CMakeLists.txt
auth/configs/: static_config.yaml
auth/include/handlers/: hello_handler.hpp
auth/include/sub_handlers/: hello_function.hpp
auth/src/: main.cpp
auth/src/handlers/: hello_handler.cpp
auth/src/sub_handlers/: hello_function.cpp
